--- a/src/components/TextBox/TextBox.module.css
+++ b/src/components/TextBox/TextBox.module.css
@@ -12,12 +12,12 @@
 }
 
 .dropzone {
-    position: absolute;
-    inset: 0;
     border: dashed 4px #0084ff4b;
     border-radius: 8px;
     box-sizing: border-box;
     height: 100%;
+    inset: 0;
+    position: absolute;
     z-index: 1;
 }
 
@@ -27,6 +27,8 @@
     flex-direction: column;
     height: 100%;
     justify-content: center;
+    padding: 8px;
+    text-align: center;
 }
 
 .write {
