--- a/src/components/Containers/RecipesContainer/RecipesContainer.module.css
+++ b/src/components/Containers/RecipesContainer/RecipesContainer.module.css
@@ -14,6 +14,7 @@
     margin: auto;
     max-width: 1100px;
     min-height: 250px;
+    max-height: 1000px;
     padding: 8px;
     width: 100%;
     
