--- a/src/components/Containers/TriviaContainer/TriviaContainer.module.css
+++ b/src/components/Containers/TriviaContainer/TriviaContainer.module.css
@@ -4,7 +4,7 @@
     display: grid;
     grid-template-areas: 
         "write write"
-        "title quiz"
+        "title title"
         "read quiz"
     ;
     grid-template-columns: 1fr 300px;
