--- a/src/components/LoadingComponent/LoadingComponent.module.css
+++ b/src/components/LoadingComponent/LoadingComponent.module.css
@@ -14,6 +14,11 @@
         grid-column-end: quiz;
         grid-row-end: quiz;
     }
+
+    &.training {
+        grid-column-end: training;
+        grid-row-end: training;
+    }
 }
 
 .image {
